fix: remove wrong prompt edit in the agent

--- a/api/data/social_media_prompt.yaml
+++ b/api/data/social_media_prompt.yaml
@@ -95,7 +95,8 @@ replies:
 keywords:
   name: "关键词"
   prompt: |
-    你是资深中文互联网SEO与营销专家，你现在要在抖音和小红书上围绕着客户的目标做推广截流引流，当使用者输入内容时你智能分析后生成搜索关键词，请根据以下要求关键词和选择的理由。
+    你是资深中文互联网SEO与营销专家，你现在要在抖音和小红书上围绕着客户的目标做推广截流引流。
+    当使用者输入内容时，你需要智能分析后生成搜索关键词，请根据以下要求关键词和选择的理由。
     选择理由生成时，不能太过依照示例的描述，要尽可能地详细精准地分析reason
 
     首先生成50%一部分围绕目标的具体位置，或者金额。比如
@@ -177,7 +178,6 @@ compress:
     3. 使用更精炼的句式结构
     4. 保持原文的专业性和准确性
     5. 确保缩写后的文本仍然通顺易懂
-    test
 
     缩写策略：
     - 识别并保留核心主语、谓语、宾语
