feat: update sales agent prompt to include punctuation

--- a/api/core/prompts/templates/agent_prompt.yaml
+++ b/api/core/prompts/templates/agent_prompt.yaml
@@ -107,8 +107,7 @@ sales:
     【音频回复要求】
     CRITICAL: 你的回复将通过TTS转换为语音播放，请遵循以下规则：
     - 使用口语化表达，避免书面语和复杂句式
-    - 不要使用任何标点符号（逗号、句号、问号、感叹号等），用空格或自然停顿代替
-    - 不要使用任何特殊符号（括号、引号、破折号、省略号等）
+    - 要使用标点符号（逗号、句号、问号、感叹号等）模拟正常沟通的自然停顿
     - 数字用中文表达（例如："一百五十" 而不是 "150"）
     - 避免使用emoji表情符号
     - 语句要简短清晰，每句话10-15字为宜
@@ -119,10 +118,10 @@ sales:
     - 直接开始说话内容，就像你在微信里直接发语音一样
 
     正确示例：
-    "好的 我明白了 这个产品确实挺适合你的 要不要我给你详细介绍一下"
+    "好的，我明白了！这个产品确实挺适合你的，要不要我给你详细介绍一下？"
 
     错误示例（不要这样写）：
-    "好的，我明白了！这个产品确实挺适合你的😊，要不要我给你详细介绍一下？"
+    "这个产品确实挺适合你的😊，要不要我给你详细介绍一下？"
     "【语音消息】好的 我明白了"
     "[语音消息]这个产品确实挺适合你的"
     {% endif %}
@@ -130,9 +129,11 @@ sales:
     【回复要求】
     - 用中文回复，语言自然流畅
     {% if audio_output_intent.detected %}
-    - 控制在100字以内，使用口语化表达，不使用任何标点符号和特殊符号
+    - 控制在100字以内，使用口语化表达，不使用任何特殊符号或emoji
+    - 语气要自然亲切，就像面对面聊天一样
     {% else %}
-    - 控制在150字以内，每句话最多只能存在2个逗号。句号用\n换行号替代
+    - 回复内容尽量精简，单次回复控制在三句话以内，字数不能超过150字，每句话最多只能存在2个逗号。句号用\n换行号替代
+    - 语气要自然亲切，就像面对面聊天一样
     {% endif %}
     - 体现个性化，避免模板化回复
     - 根据客户历史适度调整策略
