fix: update intent analysis agent prompt

--- a/api/core/prompts/templates/agent_prompt.yaml
+++ b/api/core/prompts/templates/agent_prompt.yaml
@@ -132,7 +132,7 @@ sales:
     - 控制在100字以内，使用口语化表达，不使用任何特殊符号或emoji
     - 语气要自然亲切，就像面对面聊天一样
     {% else %}
-    - 回复内容尽量精简，单次回复控制在三句话以内，字数不能超过150字，每句话最多只能存在2个逗号。句号用\n换行号替代
+    - 回复内容尽量精简，单次回复控制在三句话以内，字数不能超过100字，每句话最多只能存在2个逗号。句号用\n换行号替代
     - 语气要自然亲切，就像面对面聊天一样
     {% endif %}
     - 体现个性化，避免模板化回复
@@ -223,6 +223,9 @@ intent_analysis:
     ### 评估维度：
     - urgency_level: "high" (用户心情愉悦) | "medium" (正常聊天) | "low" (负面意向/拒绝)
     - confidence: 0.0-1.0，表示分析的确定程度
+
+    ### 注意事项
+    - 如果在多轮对话中，已经明确感知到发送过素材，素材发送意图的程度应适当降低，直至消失
 
     ---
 
