--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "langgraph>=1.0.1",
     "msgpack>=1.1.1",
     "openai>=2.6.1",
+    "openrouter>=0.1.1",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "pymilvus>=2.6.2",
