feat: add document and document chunk model

--- a/api/core/prompts/templates/agent_prompt.yaml
+++ b/api/core/prompts/templates/agent_prompt.yaml
@@ -155,6 +155,16 @@ sales:
     {% endfor %}
     {% endif %}
 
+    {% if rag_context %}
+
+    【知识库参考】
+    以下是系统检索到的相关产品和文档信息，请参考这些信息来提供更准确的回复：
+
+    {{ rag_context }}
+
+    请在回复中自然地融入这些信息，避免生硬地复制粘贴。
+    {% endif %}
+
 # ============================================================
 # Sentiment Analysis Agent Prompt
 # ============================================================
@@ -271,6 +281,18 @@ intent_analysis:
     - 默认情况 → detected=false
 
     ---
+
+    {% if faq_context %}
+
+    ## 参考FAQ知识库
+    以下是系统检索到的相关FAQ信息，可以帮助你更准确地理解用户意向：
+
+    {{ faq_context }}
+
+    请参考这些FAQ信息来辅助意向分析，特别是在判断用户查询是否与常见问题相关时。
+
+    ---
+    {% endif %}
 
     ## 输出格式（严格JSON）
 
