fix: update intent agent with threshold intent analysis

--- a/api/core/prompts/templates/agent_prompt.yaml
+++ b/api/core/prompts/templates/agent_prompt.yaml
@@ -6,7 +6,7 @@
 
 sales:
   description: Sales agent personality, behavior, and conversation handling prompt
-  version: '1.2'
+  version: '1.3'
   template: >
     {% if role_prompt %}
     {{ role_prompt }}
@@ -34,27 +34,15 @@ sales:
     系统检测到客户有到店/预约意向：
     - 意向强度: {{ "%.0f"|format(appointment_intent.intent_strength * 100) }}%
     - 时间窗口: {% if appointment_intent.time_window == "immediate" %}立即{% elif appointment_intent.time_window == "this_week" %}本周内{% elif appointment_intent.time_window == "this_month" %}本月内{% else %}未明确{% endif %}
-    {% if appointment_intent.signals %}
-    - 意向信号: {{ appointment_intent.signals|join(', ') }}
-    {% endif %}
     {% if appointment_intent.extracted_entities and appointment_intent.extracted_entities.time_expression %}
     - 客户提及时间: {{ appointment_intent.extracted_entities.time_expression }}
     {% endif %}
-    - 建议行动: {% if appointment_intent.recommendation == "suggest_appointment" %}主动建议预约{% elif appointment_intent.recommendation == "wait_signal" %}等待更明确信号{% else %}暂不邀约{% endif %}
 
     【邀约回复指导】
-    {% if appointment_intent.recommendation == "suggest_appointment" %}
     - 语气要热情积极，展现出欢迎客户到店的态度
     - 可以主动确认或询问预约细节（时间、服务项目）
-    - 提供预约便利性信息（地址、交通、联系方式）
     - 如客户已提及时间，需要确认并锁定时间
-    {% elif appointment_intent.recommendation == "wait_signal" %}
-    - 语气保持友好但不强迫
-    - 可以简单介绍到店服务的好处，但不过度推销
-    - 为后续邀约埋下伏笔
-    {% else %}
-    - 正常对话，不要主动提及到店或预约
-    {% endif %}
+    - 不要过度推销，保持友好自然的沟通方式
     {% endif %}
 
     {% if assets_intent.detected %}
@@ -92,10 +80,23 @@ sales:
     "好的！我给您发了几个相关的产品资料，您可以看看\n这些都是我们的明星产品，效果特别好\n如果有什么问题随时问我哦"
     {% else %}
     【素材状态】
-    系统未找到匹配的素材，请正常回复客户，可以：
-    - 询问客户更具体的需求
-    - 说明稍后会发送相关资料
-    - 提供其他帮助方式
+    ⚠️ CRITICAL: 系统未找到匹配的素材
+
+    【严格禁止行为】
+    - ❌ 绝对禁止编造任何不存在的信息（会议号、链接、文件名、价格、数据、房间号等）
+    - ❌ 绝对禁止说"已发送"、"给你发了"、"看看这个"等暗示已发送素材的话
+    - ❌ 绝对禁止提及任何具体的数字、代码、链接、文件名
+    - ❌ 绝对禁止说"我给你看看"、"这里有"、"刚跑出来的数据"、"我已经在里面等你"等承诺提供具体内容的话
+    - ❌ 绝对禁止编造会议室号码、预约码、订单号等任何系统生成的标识符
+
+    【允许的回复方式】
+    你只能选择以下方式之一回复：
+    1. 询问客户更具体的需求（例如："您具体想了解哪方面的信息呢？"）
+    2. 说明稍后会整理资料发送（例如："好的，我整理一下相关资料稍后发给您"）
+    3. 提供其他帮助方式（例如："您也可以直接来店里，我当面给您详细介绍"）
+    4. 承认暂时没有相关资料（例如："这方面的资料我暂时没有，我帮您问问同事"）
+
+    ⚠️ 记住：如果系统没有找到素材，就是真的没有，不要编造任何内容！
     {% endif %}
     {% endif %}
 
@@ -128,6 +129,7 @@ sales:
 
     【回复要求】
     - 用中文回复，语言自然流畅
+    - ⚠️ 【核心原则】只基于系统提供的真实信息回复，绝对禁止编造任何不存在的数据、链接、会议号、文件名、房间号等内容
     {% if audio_output_intent.detected %}
     - 控制在100字以内，使用口语化表达，不使用任何特殊符号或emoji
     - 语气要自然亲切，就像面对面聊天一样
@@ -144,7 +146,11 @@ sales:
     - 根据邀约意向检测结果调整回复语气和内容
     {% endif %}
     {% if assets_intent.detected %}
+    {% if assets_data and assets_data.assets and assets_data.assets|length > 0 %}
     - 自然地提及即将发送的素材，引导客户查看
+    {% else %}
+    - ⚠️ 系统未找到素材，不要说"已发送"或编造任何内容，只能询问需求或说明稍后发送
+    {% endif %}
     {% endif %}
 
     {% if summaries and summaries|length > 0 %}
@@ -181,7 +187,7 @@ sentiment_analysis:
 
 intent_analysis:
   description: 意向分析提示词 - 用于分析素材发送意向、邀约意向和音频输出意向
-  version: '1.2'
+  version: '1.3'
   template: >
     你是一个专业的客户意向分析专家，专门分析客户的意向需求。
 
@@ -234,8 +240,28 @@ intent_analysis:
     - urgency_level: "high" (用户心情愉悦) | "medium" (正常聊天) | "low" (负面意向/拒绝)
     - confidence: 0.0-1.0，表示分析的确定程度
 
-    ### 注意事项
-    - 如果在多轮对话中，已经明确感知到发送过素材，素材发送意图的程度应适当降低，直至消失
+    ### 重复发送检测（CRITICAL）：
+    ⚠️ **如果在近期对话历史中已经发送过素材，必须降低素材意向强度**
+
+    检测规则：
+    1. **检查对话历史**：查看最近3-5轮对话中是否有助手发送素材的记录
+    2. **识别发送信号**：
+       - 助手回复中包含"给您发了"、"已发送"、"看看这些资料"等表述
+       - 助手回复中提及具体的素材名称或产品信息
+       - 系统消息显示素材已发送
+    3. **调整意向强度**：
+       - 如果1轮前刚发送过素材 → confidence 降低至 0.1-0.3（几乎不应再发送）
+       - 如果2-3轮前发送过素材 → confidence 降低至 0.3-0.5（谨慎发送）
+       - 如果4-5轮前发送过素材 → confidence 降低至 0.5-0.7（可以考虑）
+       - 如果5轮以上未发送 → 正常评估（0.7-1.0）
+    4. **例外情况**：
+       - 用户明确要求"再发一次"、"重新发送" → 保持正常意向强度
+       - 用户询问不同类型的素材 → 可以保持正常意向强度
+
+    示例场景：
+    - 场景1：助手刚在上一轮说"我给您发了产品资料"，用户回复"好的谢谢" → detected=false 或 confidence=0.1
+    - 场景2：助手2轮前发送过价格表，用户现在问"有没有使用视频" → detected=true, confidence=0.8（不同类型素材）
+    - 场景3：助手3轮前发送过素材，用户说"再发一次" → detected=true, confidence=0.9（明确要求重发）
 
     ---
 
@@ -263,22 +289,51 @@ intent_analysis:
     ## 3. 音频输出意向 (Audio Output Intent)
     分析用户是否需要或偏好语音形式的回复，包括：
 
-    ### 意向信号：
+    ### 意向信号（扩展检测）：
+
+    #### 强信号（必须触发，confidence: 0.9-1.0）：
     - 用户发送了语音消息（input中包含audio类型）
-    - 用户明确要求语音回复（"语音说"、"发语音"、"录音回复"）
-    - 用户表达不方便阅读文字（"不方便看"、"在开车"、"在做事"）
-    - 用户询问是否可以语音交流
+    - 用户明确要求语音回复（"语音说"、"发语音"、"录音回复"、"用语音"）
+
+    #### 中等信号（应该触发，confidence: 0.7-0.9）：
+    - 用户表达不方便阅读文字（"不方便看"、"在开车"、"在做事"、"忙着呢"）
+    - 用户询问是否可以语音交流（"能语音吗"、"可以打电话吗"）
+    - 用户提到正在做其他事情（"在路上"、"在忙"、"手机不方便"）
+
+    #### 弱信号（可以触发，confidence: 0.5-0.7）：
+    - 用户回复非常简短（1-3个字，如"嗯"、"好"、"是的"）且连续出现
+    - 用户使用大量口语化表达（"咋样"、"整啥"、"咋整"）
+    - 对话节奏很快，用户快速回复
+    - 用户在移动场景（提到"外面"、"路上"、"出门"）
 
     ### 评估维度：
     - detected: true/false 是否检测到音频输出意向
-    - confidence: 0.0-1.0 置信度
-    - trigger_reason: "user_sent_audio" | "explicit_request" | "context_preference" | "none"
+    - confidence: 0.0-1.0 置信度（提高基准值）
+    - trigger_reason: "user_sent_audio" | "explicit_request" | "context_preference" | "mobility_context" | "conversational_style" | "none"
 
-    ### 判断规则：
-    - 如果用户发送了语音消息 → detected=true
-    - 如果用户明确要求语音 → detected=true
-    - 如果用户暗示偏好语音 → detected=true
-    - 默认情况 → detected=false
+    ### 判断规则（提高敏感度）：
+    1. **最高优先级**（confidence: 0.95-1.0）：
+       - 用户发送了语音消息 → detected=true, trigger_reason="user_sent_audio"
+       - 用户明确说"语音"、"发语音" → detected=true, trigger_reason="explicit_request"
+
+    2. **高优先级**（confidence: 0.75-0.9）：
+       - 用户说"不方便看"、"在开车"、"在忙" → detected=true, trigger_reason="context_preference"
+       - 用户提到移动场景 → detected=true, trigger_reason="mobility_context"
+
+    3. **中优先级**（confidence: 0.6-0.75）：
+       - 用户连续3次以上发送1-3字的简短回复 → detected=true, trigger_reason="conversational_style"
+       - 用户使用大量口语化、方言表达 → detected=true, trigger_reason="conversational_style"
+
+    4. **保持语音模式**：
+       - 如果前一轮已经使用语音回复，且用户继续简短回复 → detected=true, confidence=0.8
+
+    5. **默认情况**：
+       - 无明显信号 → detected=false
+
+    ### 注意事项：
+    - ⚠️ 宁可多触发语音，也不要漏掉用户的语音偏好
+    - 语音回复不会打扰用户，反而更自然亲切
+    - 当不确定时，倾向于 detected=true，confidence=0.6-0.7
 
     ---
 
@@ -349,15 +404,24 @@ intent_analysis:
       - 当 assets_intent.detected = true 时，**必须**提取 keywords 字段
       - keywords 应包含 3-5 个最相关的搜索关键词
       - 如果无法提取关键词，设置为空数组 []
-    5. **音频输出意向检测**：
-      - 最高优先级：用户发送了语音消息
-      - 次高优先级：用户明确要求语音回复
-      - 低优先级：根据上下文推测用户偏好语音
-    6. **实体提取规则**：
+    5. **重复发送检测（素材意向）**：
+      - ⚠️ **必须检查对话历史**，判断是否近期已发送过素材
+      - 如果1轮前刚发送 → confidence 设为 0.1-0.3
+      - 如果2-3轮前发送 → confidence 设为 0.3-0.5
+      - 如果4-5轮前发送 → confidence 设为 0.5-0.7
+      - 用户明确要求"再发一次"或询问不同类型素材 → 保持正常强度
+    6. **音频输出意向检测（提高敏感度）**：
+      - ⚠️ **倾向于触发语音回复**，宁可多触发也不要漏掉
+      - 最高优先级（confidence: 0.95-1.0）：用户发送语音消息或明确要求
+      - 高优先级（confidence: 0.75-0.9）：用户提到不方便看文字、在移动场景
+      - 中优先级（confidence: 0.6-0.75）：用户连续简短回复、使用口语化表达
+      - 保持模式：前一轮用了语音且用户继续简短回复 → confidence=0.8
+      - 当不确定时，倾向于 detected=true, confidence=0.6-0.7
+    7. **实体提取规则**：
       - 仅从用户明确陈述中提取
       - 不要推测或臆造实体信息
       - 如无明确提及，设置为 null
-    7. **返回有效的JSON**，严格匹配上述格式
+    8. **返回有效的JSON**，严格匹配上述格式
 
     请基于对话内容返回JSON格式的分析结果。
 
