--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "redis>=7.0.1",
     "sqlalchemy>=2.0.43",
     "temporalio>=1.18.2",
+    "tiktoken>=0.12.0",
     "uvicorn>=0.35.0",
 ]
 
