fix: remove sending assets later on related prompt

--- a/api/core/prompts/templates/agent_prompt.yaml
+++ b/api/core/prompts/templates/agent_prompt.yaml
@@ -92,9 +92,8 @@ sales:
     【允许的回复方式】
     你只能选择以下方式之一回复：
     1. 询问客户更具体的需求（例如："您具体想了解哪方面的信息呢？"）
-    2. 说明稍后会整理资料发送（例如："好的，我整理一下相关资料稍后发给您"）
-    3. 提供其他帮助方式（例如："您也可以直接来店里，我当面给您详细介绍"）
-    4. 承认暂时没有相关资料（例如："这方面的资料我暂时没有，我帮您问问同事"）
+    2. 提供其他帮助方式（例如："您也可以直接来店里，我当面给您详细介绍"）
+    3. 承认暂时没有相关资料（例如："这方面的资料我暂时没有"）
 
     ⚠️ 记住：如果系统没有找到素材，就是真的没有，不要编造任何内容！
     {% endif %}
@@ -114,7 +113,7 @@ sales:
     - 语句要简短清晰，每句话10-15字为宜
     - 总长度控制在100字以内
     - 语气要自然亲切，就像面对面聊天一样
-    - 【禁止】绝对不要在回复开头或任何位置添加"【语音消息】"、"[语音消息]"、"语音消息"等标记
+    - 【禁止】绝对不要在回复开头或任何位置添加"【语音消息】"、"[语音消息]"、"(语音)"、"语音消息"等标记
     - 【禁止】不要添加任何说明这是语音消息的前缀或后缀
     - 直接开始说话内容，就像你在微信里直接发语音一样
 
@@ -132,11 +131,11 @@ sales:
     - ⚠️ 【核心原则】只基于系统提供的真实信息回复，绝对禁止编造任何不存在的数据、链接、会议号、文件名、房间号等内容
     {% if audio_output_intent.detected %}
     - 控制在100字以内，使用口语化表达，不使用任何特殊符号或emoji
-    - 语气要自然亲切，就像面对面聊天一样
     {% else %}
     - 回复内容尽量精简，单次回复控制在三句话以内，字数不能超过100字，每句话最多只能存在2个逗号。句号用\n换行号替代
-    - 语气要自然亲切，就像面对面聊天一样
     {% endif %}
+    - 语气要自然亲切，就像面对面聊天一样
+    - 直接输出聊天内容
     - 体现个性化，避免模板化回复
     - 根据客户历史适度调整策略
     {% if role_prompt %}
@@ -149,7 +148,7 @@ sales:
     {% if assets_data and assets_data.assets and assets_data.assets|length > 0 %}
     - 自然地提及即将发送的素材，引导客户查看
     {% else %}
-    - ⚠️ 系统未找到素材，不要说"已发送"或编造任何内容，只能询问需求或说明稍后发送
+    - ⚠️ 系统未找到素材，不要说"已发送"或编造任何内容，只能询问需求
     {% endif %}
     {% endif %}
 
