feat: add nava profile config

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -139,6 +139,43 @@ services:
     networks:
       - mas-network
 
+  nava-api:
+    image: ${REGISTRY_URL}/api:latest
+    environment:
+      <<: *shared-mas-env
+      CALLBACK_URL: ${CALLBACK_URL_NAVA}
+      DEBUG: true
+      LOG_LEVEL: DEBUG
+      SQLALCHEMY_ECHO: true
+      DB_NAME: ${DB_NAME_NAVA}
+      REDIS_DB: ${REDIS_DB_NAVA}
+      ES_MEMORY_INDEX: ${ELASTIC_MEMORY_INDEX_NAVA}
+      TEMPORAL_NAMESPACE: ${TEMPORAL_NAMESPACE_NAVA}
+    depends_on: *mas-depends-on
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/v1/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - mas-network
+
+  nava-worker:
+    image: ${REGISTRY_URL}/api:latest
+    environment:
+      <<: *shared-mas-env
+      CALLBACK_URL: ${CALLBACK_URL_NAVA}
+      MODE: worker
+      DB_NAME: ${DB_NAME_NAVA}
+      REDIS_DB: ${REDIS_DB_NAVA}
+      ES_MEMORY_INDEX: ${ELASTIC_MEMORY_INDEX_NAVA}
+      TEMPORAL_NAMESPACE: ${TEMPORAL_NAMESPACE_NAVA}
+    depends_on: *mas-depends-on
+    restart: unless-stopped
+    networks:
+      - mas-network
+
   langfuse-web:
     image: ${REGISTRY_URL}/frontend:latest
     depends_on: &langfuse-depends-on
@@ -336,6 +373,7 @@ services:
       NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
       NGINX_TEST_SERVER_NAME: ${NGINX_TEST_SERVER_NAME}
       NGINX_SUA_SERVER_NAME: ${NGINX_SUA_SERVER_NAME}
+      NGINX_NAVA_SERVER_NAME: ${NGINX_NAVA_SERVER_NAME}
       NGINX_PORT: ${NGINX_PORT:-80}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
